--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/platform-socket.io": "^10.3.8",
     "@nestjs/sequelize": "^10.0.1",
     "@nestjs/swagger": "^7.3.1",
+    "@types/sequelize": "^4.28.20",
     "argon2": "^0.40.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -40,7 +41,8 @@
     "pg": "^8.11.5",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "sequelize-typescript": "^2.1.6"
+    "sequelize": "^6.37.3",
+    "sequelize-typescript": "^2.1.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
